cmake_minimum_required(VERSION 3.7)
project(gl)

set(CMAKE_CXX_STANDARD 11)
if (MINGW)
    message(PLATFORM ">>> MINGW")
    set(CMAKE_EXE_LINKER_FLAGS "-lopengl32  -lgdi32 -luser32 -lkernel32 -lglu32")
endif(MINGW)

if(APPLE)
    message(PLATFORM ">>> APPLE")
    set(CMAKE_EXE_LINKER_FLAGS "-lglfw3 -framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo")
endif(APPLE)

aux_source_directory(./ SOURCE_FILES)
aux_source_directory(./deps OTHER_SRC_FILES)
aux_source_directory(./base OTHER_SRC_FILES)
aux_source_directory(./ui OTHER_SRC_FILES)
aux_source_directory(./ext OTHER_SRC_FILES)
aux_source_directory(./ext/glm OTHER_SRC_FILES)
aux_source_directory(./render OTHER_SRC_FILES)
aux_source_directory(./samples OTHER_SRC_FILES)
aux_source_directory(./math OTHER_SRC_FILES)
list(APPEND SOURCE_FILES ${OTHER_SRC_FILES})

include_directories(${PROJECT_SOURCE_DIR}/deps)
include_directories(${PROJECT_SOURCE_DIR}/glfw)
include_directories(${PROJECT_SOURCE_DIR}/base)
include_directories(${PROJECT_SOURCE_DIR}/ui)
include_directories(${PROJECT_SOURCE_DIR}/ext)
include_directories(${PROJECT_SOURCE_DIR}/render)
include_directories(${PROJECT_SOURCE_DIR}/samples)
include_directories(${PROJECT_SOURCE_DIR}/math)
link_directories(${PROJECT_SOURCE_DIR}/deps)
link_directories(${PROJECT_SOURCE_DIR}/base)
link_directories(${PROJECT_SOURCE_DIR}/ui)
link_directories(${PROJECT_SOURCE_DIR}/ext/glm)
link_directories(${PROJECT_SOURCE_DIR}/render)
link_directories(${PROJECT_SOURCE_DIR}/samples)
link_directories(${PROJECT_SOURCE_DIR}/math)
if (MINGW)
    link_directories(${PROJECT_SOURCE_DIR}/glfw/win32)
endif(MINGW)

if(APPLE)
    link_directories(${PROJECT_SOURCE_DIR}/glfw/mac)
endif(APPLE)

add_executable(gl ${SOURCE_FILES} entity/Entity.cpp entity/Entity.h component/Component.cpp component/Component.h system/System.cpp system/System.h ui/Cube.cpp ui/Cube.h render/Render.cpp render/Render.h render/Camera.cpp render/Camera.h render/ShaderCache.cpp render/ShaderCache.h samples/CustomDraw.cpp samples/CustomDraw.h base/Log.cpp base/Log.h gk.h samples/Triangle.h samples/Triangle.cpp  samples/Rectangle.h samples/Rectangle.cpp samples/Texture.cpp samples/Texture.h)

target_link_libraries(gl glfw3.a)
