cmake_minimum_required(VERSION 3.7)
project(gl)

set(CMAKE_CXX_STANDARD 11)
if (MINGW)
    message(PLATFORM ">>> MINGW")
    set(CMAKE_EXE_LINKER_FLAGS "-lopengl32  -lgdi32 -luser32 -lkernel32 -lglu32")
endif (MINGW)
if (APPLE)
    message(PLATFORM ">>> APPLE")
    set(CMAKE_EXE_LINKER_FLAGS " -framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo")
endif (APPLE)

aux_source_directory(./ SOURCE_FILES)
aux_source_directory(extrnal/glfw/deps OTHER_SRC_FILES)
aux_source_directory(base OTHER_SRC_FILES)
aux_source_directory(ui OTHER_SRC_FILES)
aux_source_directory(extrnal OTHER_SRC_FILES)
aux_source_directory(render OTHER_SRC_FILES)
aux_source_directory(samples OTHER_SRC_FILES)
aux_source_directory(math OTHER_SRC_FILES)
list(APPEND SOURCE_FILES ${OTHER_SRC_FILES})

include_directories(extrnal/glfw/deps)
include_directories(extrnal/glfw)
include_directories(${PROJECT_SOURCE_DIR}/base)
include_directories(${PROJECT_SOURCE_DIR}/ui)
include_directories(${PROJECT_SOURCE_DIR}/extrnal)
include_directories(${PROJECT_SOURCE_DIR}/render)
include_directories(${PROJECT_SOURCE_DIR}/math)

link_directories(extrnal/glfw/deps)
link_directories(${PROJECT_SOURCE_DIR}/base)
link_directories(${PROJECT_SOURCE_DIR}/ui)
link_directories(${PROJECT_SOURCE_DIR}/extrnal)
link_directories(${PROJECT_SOURCE_DIR}/render)
link_directories(${PROJECT_SOURCE_DIR}/samples)
link_directories(${PROJECT_SOURCE_DIR}/math)

if (MINGW)
    link_directories(extrnal/glfw/win32)
    link_directories(extrnal/assimp/win32)
    link_directories(extrnal/zlib/win32)
endif (MINGW)
if (APPLE)
    link_directories(extrnal/glfw/mac)
    link_directories(extrnal/assimp/mac)
    link_directories(extrnal/zlib/mac)
endif (APPLE)

add_executable(gl ${SOURCE_FILES} samples/AdvancedGLSL.cpp samples/AdvancedGLSL.h samples/GeometryShader.cpp samples/GeometryShader.h samples/AntiAliasing.cpp samples/AntiAliasing.h samples/BlinnPhongLighting.cpp samples/BlinnPhongLighting.h)

target_link_libraries(gl glfw3.a assimp.a zlibstatic.a)

